# azure-toolkit

./: .gitignore  README.md  _callback_server.py  azure_auth.py  graph_mail.py  pyproject.toml  requirements.txt
azure_toolkit/: graph_mail.py
